recropped team photos, fixed landing page and achievements element colors

--- a/src/sections/landing/styles.module.css
+++ b/src/sections/landing/styles.module.css
@@ -20,7 +20,7 @@
 
 .heading h1:nth-last-of-type(1) {
   margin: 0 0 0 22%;
-  color: orange;
+  color: #efca53;
   font-family: "Montserrat", sans-serif;
   font-weight: 600;
   font-size: 330%;
