--- a/src/sections/our-team/components/teamCard.module.css
+++ b/src/sections/our-team/components/teamCard.module.css
@@ -3,7 +3,7 @@
   width: 250px;
   height: 280px;
   /* max-height: 280px; */
-  min-height: 320px;
+  min-height: 340px;
   text-align: center;
   padding: 10px;
   margin: 25px;
